...
    <string name="edt_date">Pic a date...</string>
    <string name="edt_time">Pic a time...</string>
    <string name="edt_pic_date">Pic</string>
    <string name="edt_pic_time">Pic</string>
    <string name="msc_shared_pref_filename" translatable="false">mt.edu.um.getalift.sf</string>
    <string name="msc_saved_user" translatable="false">user</string>
    <string name="edt_signin_phonenumber">Phone Number</string>
    <string name="error_username_short">The username must be more than 6 character long.</string>
    <string name="error_password_missing">To edit your password, you have to enter a new one !</string>
    <string name="error_password_short">The password must be more than 6 character long.</string>
    <string name="error_password_long">The password must be less than 63 character long.</string>
    <string name="error_actual_password_missing">To edit your password, you have to enter your actual password !</string>
    <string name="error_actual_password_incorrect">Your actual password is incorrect !</string>
    <string name="error_actual_password_correct">Your actual password is correct !</string>
    <string name="error_username_long">The username must be less than 63 character long.</string>
    <string name="error_email_valid">You must enter a valid email adress.</string>
    <string name="error_firstname_notset">You must tell your firstname.</string>
    <string name="error_lastname_notset">You must tell your last name.</string>
    <string name="error_phone_valid">You must enter a valid phone number.</string>
    <string name="success_account_created">Your account is created. You can log in now.</string>
    <string name="success_profile_edit">Your profile has been edit. You can look your new information on the profile page.</string>
    <string name="error_username_exists">This username already exists. Please chose another one.</string>
    <string name="txt_title_profile">Get A Lift - Profile</string>
    <string name="txt_title_drive">Get A Lift - Drive</string>
    <string name="txt_title_result_search">Available drives</string>
...
